css/style.css
@font-face {
    font-family: 'Early GameBoy';
    src: url('../fonts/Early-GameBoy.woff2') format('woff2'),
        url('../fonts/Early-GameBoy.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

body {
    /* so that double tap on mobile safari does not activate zoom
     https://stackoverflow.com/a/62165035 */
    touch-action: pan-x pan-y;
    touch-action: none;

    font-family: 'Early GameBoy';
    margin: 0;
    background-color: #f2b991;
    min-width: 415px;
} 

h1 {
    font-size: 1rem;
    color: #222c6a;
    text-align: center;
    
}

img {
    max-width: 100%;
}

.btn-start {
    position: absolute;
    background-color: transparent;
    top: 665px;
    left: 230px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-select {
    position: absolute;
    background-color: transparent;
    top: 665px;
    left: 145px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-up {
    position: absolute;
    background-color: transparent;
    top: 430px;
    left: 72px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-down {
    position: absolute;
    background-color: transparent;
    top: 510px;
    left: 72px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-left {
    position: absolute;
    background-color: transparent;
    top: 470px;
    left: 34px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-right {
    position: absolute;
    background-color: transparent;
    top: 470px;
    left: 112px;
    height: 40px;
    width: 40px;
    border: none;
    background: none;
}

.btn-a {
    position: absolute;
    background-color: transparent;
    top: 435px;
    left: 320px;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    border: none;
    background: none;
    
}

.btn-b {
    position: absolute;
    background-color: transparent;
    top: 475px;
    left: 250px;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    border: none;
    background: none;
}

.logo-img {
    width: 150px;
}

.button {
    font-family: 'Early GameBoy';
    font-size: 0.75rem;
    color: #df1e36;
    border: none;
    background: none;
    transition: color 0.2s ease 0.2s;
}

.button:hover {
    color: #222c6a;
}

.page-bg {
    display: flex;
    align-items: center;
    justify-content: center;
}

.game-area {
    background-image: url(../assets/page-bg.png);
    background-repeat: no-repeat;
    background-size: contain;
    width: 415px;
    height: 762px;
    display: flex;
    justify-content: center;
    align-items: start;
    padding: 65px 81px 65px 84px;
    box-sizing: border-box;
    position: relative;
}

.game-instructions {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 8px;
}

.game-instructions p{
    font-size: 0.50rem;
    text-align: center;
}

.game-intro {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-intro .logo-img {
    margin-top: 10px;
    margin-bottom: 25px;
}

.basketball-court {
    display: flex;
    justify-content: center;
}


.basketball-court canvas {
    border: 1px solid black;
}

.game-over {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-over h1 {
    font-size: 2rem;
    margin-top: 75px;

}

.game-win {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-win h1 {
    font-size: 0.85rem;
    margin-top: 20px;
}

.game-win .logo-img {
    margin-top: 15px;
}

.game-win h2 {
    font-size: 0.65rem;
    color: #222c6a;
    text-align: center;
    margin-top: 15px;
}

.game-intro, .game-play, .game-over, .game-win, .game-instructions {
    display: none;
}

.show {
    display: flex;
}

